<resources>
    <string name="app_name">Folyamatellenőri feladatok app</string>
    <string name="folyamatellen_r">Folyamatellenőr</string>
    <string name="ellen_rz_s">Ellenőrzés</string>
    <string name="gy_rt_sor">Gyártósor</string>
    <string name="tov_bb">Tovább</string>
    <string name="szem_lyi_esd_v_delem_ellen_rz_se_alkalmaz_sa_alkatr_sz_kezel_sn_l">Személyi ESD védelem ellenőrzése, alkalmazása alkatrész kezelésnél</string>
    <string name="k_zleked_utak_munkahelyek_rendezetts_ge">Közlekedő utak, munkahelyek rendezettsége</string>
    <string name="panelkezel_s_t_rol_s_megfelel_s_ge">Panelkezelés, tárolás megfelelősége</string>
    <string name="jav_t_llom_s_forraszt_p_ka_h_m_rs_klet_ellen_rz_s">Javítóállomás forrasztópáka hőmérséklet ellenőrzés</string>
    <string name="gy_rt_g_pek_karbantart_si_feljegyz_sei">Gyártógépek karbantartási feljegyzései</string>
    <string name="el_t_raz_sok_egy_rtelm_azonos_t_sa">Előtárazások egyértelmű azonosítása</string>
    <string name="felt_razott_nedvess_g_rz_keny_alkatr_szek_mintav_teles_ellen_rz_se">Feltárazott nedvességérzékeny alkatrészek mintavételes ellenőrzése</string>
    <string name="npaszta_s_ragaszt_t_rol_h_t_k_ellen_rz_se_h_m_rs_klet_lej_rat_fifo">Ónpaszta és ragasztó tároló hűtők ellenőrzése (hőmérséklet, lejárat, FIFO)</string>
    <string name="f_lk_sz_s_k_szterm_k_azonos_t_s_t_telk_s_r_lap_magazin_k_s_r_c_mke">Félkész- és késztermék azonosítás (tételkísérő lap magazin kísérő címke)</string>
    <string name="textview">TextView</string>
    <string name="j_ellen_r">Új ellenőr</string>
    <string name="instruktor">Instruktor</string>
    <string name="m_szakvezet">Műszakvezető</string>
    <string name="start">Start</string>
    <string name="d_tum">Dátum</string>
    <string name="m_veleti_utas_t_s_term_k_forgat_k_nyv_alkalmaz_sa">Műveleti utasítás (termék forgatókönyv) alkalmazása</string>
    <string name="t_raz_s_ellen_rz_se_csak_amistar">Tárazás ellenőrzése (csak Amistar)</string>
    <string name="h_profil_rv_nyess_ge_aktualit_s_j_v_hagy_s">Hőprofil érvényessége (aktualitás, jóváhagyás)</string>
    <string name="ragaszt_felhord_s_poz_cion_l_sa_mennyis_g_forma">Ragasztó felhordás pozícionálása, mennyiség, forma</string>
    <string name="ragaszt_t_pus_lej_rati_id">Ragasztó típus, lejárati idő</string>
    <string name="npaszta_vastags_gm_r_s_megfelel_s_g_dokument_l_s">Ónpaszta vastagságmérés megfelelőség, dokumentálás</string>
    <string name="npaszta_t_pus_lej_rati_id_felbont_si_id">Ónpaszta típus, lejárati idő, felbontási idő</string>
    <string name="npaszta_poz_cion_l_sa_forraszt_si_pont_kit_lt_se">Ónpaszta pozícionálása, forrasztási pont kitöltése</string>
    <string name="panel_s_term_k_cikksz_m_sorozatsz_m_jel_l_s_poz_ci_olvashat_s_g">Panel és termék cikkszám, sorozatszám jelölés (pozíció, olvashatóság)</string>
    <string name="cikksz_m">Cikkszám</string>
    <string name="panel_al_t_maszt_s_poz_ci_ja_a_kemenc_ben">Panel alátámasztás pozíciója a kemencében</string>
    <string name="n2_g_z_alkalmaz_sa_forgat_k_nyv_alapj_n">N2 gáz alkalmazása forgatókönyv alapján</string>
    <string name="els_darab_ellen_rz_s_mintapanel_vagy_be_ltet_si_rajz_alapj_n">Első darab ellenőrzés mintapanel vagy beültetési rajz alapján</string>
    <string name="ragasztott_alkatr_sz_csavar_nyomat_k_m_r_s">Ragasztott alkatrész csavarónyomaték mérés</string>
    <string name="t_telk_s_r_lap_s_magazin_k_s_r_c_mke_alkalmaz_sa">Tételkísérő lap és magazin kísérő címke alkalmazása</string>
    <string name="nxt_v_laszt_s">NXT választás</string>
    <string name="tov_bb2">Tovább</string>
    <string name="nxt_v_laszt_s2">NXT választás</string>
    <string name="cikksz_m_megad_sa">Cikkszám megadása:</string>
    <string name="cikksz_m_v_laszt_sa">Cikkszám választása</string>
    <string name="kezd_s">Kezdés</string>
    <string name="folytat_s">Folytatás</string>
    <string name="m_szak">Műszak</string>
    <string name="de">De</string>
    <string name="du">Du</string>
    <string name="j">Éj</string>
    <string name="notification_activity">NotificationView</string>
    <string name="channel_name">Értesítés</string>
    <string name="channel_description">Átállás a következő soron</string>


    <string-array name="nxt_box_array">
        <item>NXT01</item>
        <item>NXT02</item>
        <item>NXT03</item>
        <item>NXT04</item>
        <item>NXT05</item>
        <item>NXT06</item>
        <item>NXT07</item>
        <item>NXT08</item>
        <item>NXT09</item>
        <item>NXT10</item>
    </string-array>

    <string-array name="paszta">
        <item>-</item>
        <item>999000221 - PASZTA ALPHA CVP-390 TYPE4 155717</item>
        <item>51300065 - PASZTA KOKI S3X58-M406L-6 ECO+FORR.PASZT</item>
        <item>999000222 - PASZTA KOKI S3X58-M500C-7</item>
        <item>320-750-38 - ÓNPASZTA SB6N58-M500SI ALACSONY OLVADÁSP.</item>
        <item>448-000-53 - ÓNPASZTA SS4-M953I (KOKI) 14510</item>
        <item>448-000-54 - PASZTA KOKI S3X58M406L-L3</item>
        <item>448-000-55 - PASZTA SENJU M705-GRN360-K1V</item>
        <item>448-000-56 - PASZTA SENJU M31-GRN360-K1MK-V</item>
        <item>320-764-89 - AIM NC257 SAC105 T4 J35</item>
        <item>999000223 - M8-REL61TM-38-J5</item>
        <item>23333127 - SN62 MP101 AGS 89,5</item>
    </string-array>

    <string-array name="ragaszto_1">
        <item>-</item>
        <item>PD944</item>
        <item>PD945</item>
        <item>PD955M</item>
        <item>PD955 PY</item>
        <item>PD860002 </item>
        <item>ECCOBOND D125F</item>
    </string-array>

    <string-array name="ragaszto_2">
        <item>-</item>
        <item>PD944</item>
        <item>PD945</item>
        <item>PD955M</item>
        <item>PD955 PY</item>
        <item>PD860002 </item>
        <item>ECCOBOND D125F</item>
    </string-array>

    <string-array name="ragaszto_3">
        <item>-</item>
        <item>PD944</item>
        <item>PD945</item>
        <item>PD955M</item>
        <item>PD955 PY</item>
        <item>PD860002 </item>
        <item>ECCOBOND D125F</item>
    </string-array>

    <string-array name="instruktor">
        <item>Vajda Piroska</item>
        <item>Jávori Helga</item>
        <item>Dékány Zsolt</item>
        <item>Kondor Lászlóné</item>
        <item>Zámbóné Miklós Réka</item>
    </string-array>

    <string-array name="muvez">
        <item>Koncz Tamás</item>
        <item>Szabó Zoltán </item>
        <item>Szántó Gabriella</item>
        <item>Takács Sándor</item>
    </string-array>
</resources>