<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:ignore="Deprecated">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="30dp"
        android:layout_y="224dp"
        android:text="@string/folyamatellen_r" />

    <EditText
        android:id="@+id/nev_mezo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="163dp"
        android:layout_y="210dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="67dp"
        android:layout_y="294dp"
        android:text="@string/instruktor" />

    <EditText
        android:id="@+id/instruktor_mezo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="163dp"
        android:layout_y="271dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="39dp"
        android:layout_y="366dp"
        android:text="@string/m_szakvezet" />

    <EditText
        android:id="@+id/muvez_mezo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="163dp"
        android:layout_y="354dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ellenorzes_gomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="141dp"
        android:layout_y="595dp"
        android:onClick="ujoldal"
        android:text="@string/start" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="90dp"
        android:layout_y="161dp"
        android:text="@string/d_tum" />

    <EditText
        android:id="@+id/datum_mezo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="163dp"
        android:layout_y="148dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="68dp"
        android:layout_y="473dp"
        android:text="Műszak" />

    <RadioGroup
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_x="161dp"
        android:layout_y="455dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/csekk_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="162dp"
            android:layout_y="443dp"
            android:text="De" />

        <RadioButton
            android:id="@+id/csekk_du"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="243dp"
            android:layout_y="442dp"
            android:text="Du" />

        <RadioButton
            android:id="@+id/csekk_ej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="320dp"
            android:layout_y="441dp"
            android:text="Éj" />
    </RadioGroup>

</AbsoluteLayout>
    </androidx.core.widget.NestedScrollView>